fix: Various issues on chromium browsers on mobile.

--- a/style.css
+++ b/style.css
@@ -23,4 +23,9 @@ body {
 	html {
 		font-size: 12px;
 	}
+
+	/* Fixes issue on mobile on chromium. */
+	.modal-lg {
+		max-width: 95vw;
+	}
 }
